syntax = "proto3";

package SmartSchedule;

service EmployeeService{
  rpc getEmployees (EmployeeRequest) returns (EmployeeResponse) {}
  rpc giveEmployee (EmployeeInput) returns (EmployeeCreated) {}
}

message EmployeeRequest{
  string minDurationDays = 1;
  string minLevel = 2;
}


message EmployeeResponse{
  repeated EmployeeDetails employee = 1;
  int32 total = 2;
  int32 provided = 3;
}

message EmployeeDetails{
  string employeeID = 1;
  string employeeName = 2;
  string employeeStartDate = 3;
  string employeeLevel = 4;
}

message EmployeeInput{
  EmployeeDetails employee = 1;
}

message EmployeeCreated{
  string employeeResult = 1;
}
